feat(sysview): add sysview router
